<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <Button 
        android:text="@string/start_scanning"
        android:id="@+id/startbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <EditText 
        android:text="@string/default_ssid"
        android:hint="@string/ssid_hint"
        android:id="@+id/ssid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/startbutton"/>
    
    <TextView
        android:id="@+id/textbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/found_devices"
        android:layout_below="@id/ssid" />
     
    <RelativeLayout
        android:id="@+id/footer" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
    
	    <Button
	        android:text="@string/calibrate"
	        android:id="@+id/calibratebutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"/>
	        
	    <Button
	        android:text="@string/map"
	        android:id="@+id/mapbutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"/>
        
    </RelativeLayout>
    
     <EditText 
        android:hint="@string/note_hint"
        android:id="@+id/note"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"/>
     
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_label"
        android:layout_above="@id/note" />

</RelativeLayout>
