<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ProgressBar 
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        style="?android:attr/progressBarStyleHorizontal"/>
    
    <TextView 
        android:id="@+id/progresstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress"
        android:layout_below="@id/progress"/>
    
    <TextView 
        android:id="@+id/task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fetching"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:textSize="32dp"
        android:layout_centerVertical="true"/>
    
    <Button 
        android:id="@+id/okbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:enabled="false"/>

</RelativeLayout>
